# metis

./: .gitignore  CMakeLists.txt  README.md
GKlib/: CMakeLists.txt  GKlibSystem.cmake
include/: metis.h.in
